Replaced initialization sequence with more angular approach.
All functionality works from standard url.
Fails with ago new window url.

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -31,7 +31,8 @@ html(style="height:100%;width:100%;")
             script(src='http://code.jquery.com/jquery-2.0.3.min.js')
             script(src='/javascripts/lib/angular/ng-grid.js')
             script(src='/javascripts/Modal311.js')
-            script(src='/javascripts/MasherApp.js')
+            script(src='/javascripts/setup.js')
+            script(src='/javascripts/init.js')
         
     body(class="nihilo",style="height:100%;width:100%;")
         block content
