Getting confusing, commit before tryiing AMD requirejs

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -21,7 +21,6 @@ html(style="height:100%;width:100%;")
         block scriptsblock
             script(src='/javascripts/lib/DocDomain.js')
             script(src='/javascripts/lib/djConfig.js')
-            script(src='//serverapi.arcgisonline.com/jsapi/arcgis/?v=3.5compact')
             script(src='/javascripts/lib/SearchGrid.js')
             script(src='/javascripts/lib/SearchGridMap.js')
             script(src='/javascripts/lib/angular/angular.js')
@@ -31,6 +30,15 @@ html(style="height:100%;width:100%;")
             script(src='http://code.jquery.com/jquery-2.0.3.min.js')
             script(src='/javascripts/lib/angular/ng-grid.js')
             script(src='/javascripts/Modal311.js')
+            script(src='/javascripts/controllers/MasherCtrl.js')
+            script(src='/javascripts/controllers/TabsCtrl.js')
+            script(src='/javascripts/controllers/MapCtrl.js')
+            script(src='/javascripts/controllers/VerbageCtrl.js')
+            script(src='/javascripts/controllers/SPACtrl.js')
+            script(src='/javascripts/controllers/SearcherCtrlGrp.js')
+            script(src='/javascripts/controllers/SearcherCtrlMap.js')
+            script(src='/javascripts/controllers/StompSetupCtrl.js')
+            script(src='/javascripts/controllers/AppController.js')
             script(src='/javascripts/setup.js')
             script(src='/javascripts/init.js')
         
