--- a/views/layout.jade
+++ b/views/layout.jade
@@ -19,28 +19,8 @@ html(style="height:100%;width:100%;")
             link(rel='stylesheet', href='/stylesheets/Control.Loading.css')
             
         block scriptsblock
-            script(src='/javascripts/lib/DocDomain.js')
-            script(src='/javascripts/lib/djConfig.js')
-            script(src='/javascripts/lib/SearchGrid.js')
-            script(src='/javascripts/lib/SearchGridMap.js')
-            script(src='/javascripts/lib/angular/angular.js')
-            script(src='/javascripts/lib/angular/angular-route.js')
-            script(src='https://rawgithub.com/angular-ui/ui-layout/master/src/ui-layout.js')
-            script(src='http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.11.0.js')
-            script(src='http://code.jquery.com/jquery-2.0.3.min.js')
-            script(src='/javascripts/lib/angular/ng-grid.js')
-            script(src='/javascripts/Modal311.js')
-            script(src='/javascripts/controllers/MasherCtrl.js')
-            script(src='/javascripts/controllers/TabsCtrl.js')
-            script(src='/javascripts/controllers/MapCtrl.js')
-            script(src='/javascripts/controllers/VerbageCtrl.js')
-            script(src='/javascripts/controllers/SPACtrl.js')
-            script(src='/javascripts/controllers/SearcherCtrlGrp.js')
-            script(src='/javascripts/controllers/SearcherCtrlMap.js')
-            script(src='/javascripts/controllers/StompSetupCtrl.js')
-            script(src='/javascripts/controllers/AppController.js')
-            script(src='/javascripts/setup.js')
-            script(src='/javascripts/init.js')
+        
+            script(data-main="javascripts/appmain", src='/javascripts/require.js')
         
     body(class="nihilo",style="height:100%;width:100%;")
         block content
