Commit with latest problems in conflict between dojo define and rquirejs define, etc.
Latest searches say to use dojo loader instead of requirejs.

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -20,6 +20,7 @@ html(style="height:100%;width:100%;")
             
         block scriptsblock
         
+            <script type='text/javascript'>var djConfig = { parseOnLoad: true };</script>
             script(data-main="javascripts/appmain", src='/javascripts/require.js')
         
     body(class="nihilo",style="height:100%;width:100%;")
