--- a/views/partials/MapPageBase.jade
+++ b/views/partials/MapPageBase.jade
@@ -20,10 +20,10 @@ block append content
 
                     td(style='width: 70%')
                         table(style='padding-right:20px;')
-                            tr(ng-controller="PositionViewCtrl")
+                            tr
                                 td(style='width:50%')
-                                    input(id = 'mppos', type='text', name='cursPos', disabled, ng-model="positionView", style='font-size:9pt;text-align:right;margin-right:10px;padding: 0px 5px 0px 5px;width:100%')
-                                td
+                                    input(id = 'mppos', type='text', name='cursPos', disabled, style='font-size:9pt;text-align:right;margin-right:10px;padding: 0px 5px 0px 5px;width:100%')
+                                td(ng-controller="PositionViewCtrl")
                                     select(ng-model="currentViewOption", ng-options="option.type for option in viewOptions", ng-change="setPostionDisplayType()")
                                 td
                                     span
